# charlie

./: .gitignore  2025-11-04-journal-entities-design.md  AGENTS.md  BATCHING.md  CHECKPOINT.md  CLAUDE.md  LICENSE  PLAN-database-isolation.md  PLAN_GLOBAL_ENTITY_SUPPRESSION.md  README-CHARLIE.md  README.md  TODO.md  V2_PLAN.md  cache_home.md  charlie.py  charlie.sh  conftest.py  distilbert-ner.py  distilbert_ner.py  dl_convert_dbert.py  dl_convert_onnx.py  dspy-poc.py  entity_utils.py  falkordb_utils.py  fix_reactive.md  gradio_app.py  graphiti-cli.py  graphiti-poc.py  graphiti_pipeline.py  graphviz_utils.py  home-state.md  home_redesign.md  huey_followup_issues.md  huey_issues.md  inference_onnx.py  kuzu_explorer.sh  load_journals.py  main.py  mlx_test.py  models.py  (+17 more)
.claude/: settings.local.json
.dspy_cache/011/: cache.db
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: __init__.py  main.py  settings.py
app/llm/: batcher.py  client.py  embedder.py  prompts.py  schema_patches.py
app/models/: __init__.py  graph.py
app/routes/: __init__.py  communities.py  entities.py  episodes.py
app/services/: __init__.py  kuzu_service.py  text_enrichment.py
app/utils/: __init__.py  mention_finder.py
archive/: dspy-poc.py  settings.py
archive/pipeline/: _dspy_setup.py  extract_nodes.py  generate_summaries.py  (+3 more)
backend/: __init__.py  database.py  dspy_cache.py  settings.py
benchmarks/: benchmark_model_pool.py
distilbert-ner-uncased-onnx/: config.json
docs/: ENTITY_EXTRACTION_FIX.md  TODO.md  V2_PLAN.md  benchmark_pool.md  dspy_outlines.md  embedding_dimensions.md  falkordblite-macos-arm64-build.md  halting_problem.md  huey_orchestrator.md  model_fusion.md  phase1-poc-status.md  phase1-test-checklist.md  prompt-caching.md
dspy_outlines/: README.md  __init__.py  adapter.py  base_lm.py  hybrid_lm.py  kg_extraction.py  lm.py  mlx_loader.py  schema_extractor.py
falkordblite-build/: build-verification-report.md  build_falkordb_macos_arm64.sh  falkordblite-macos-arm64-build.md  test_falkordblite.py
frontend/: __init__.py  settings.py  utils.py
importers/: IMPORTING.md  basic_xml.py  dayone.py  files.py  utils.py  xml.py
inference_runtime/: dspy_lm.py  loader.py
legacy/: charlie_local.py  search_examples.py
logs/: huey-worker.err
mlx_runtime/: __init__.py  dspy_lm.py  loader.py
pipeline/: README.md  __init__.py  db_utils.py  entity_edge_models.py  extract_attributes.py  extract_edges.py  extract_nodes.py  falkordblite_driver.py  generate_summaries.py  gradio_ui.py  local_llm_client.py  ner_type_overrides.py  persistence.py  run_all_optimizers.py  self_reference.py
pipeline_v1/: graphiti_pipeline.py
plan/: db_conf.md  graphiti_integration.md  mlx_graphiti.md  mlx_graphiti_dspy_fusion.md  mlx_implementation.md  mlx_simplification.md  mlx_test.md
plans/: 2025-11-19-extract-nodes.md  README.md  dspy-outlines-mlx.md  falkordblite-evaluation.md  graphiti-models-archive.md  graphiti-models.md  huey_implementation_plan.md  huey_orchestrator.md  model_fusion.md  phase-01-foundations.md  phase-02-core-extraction.md  phase-03-deduplication.md  phase-04-temporal-and-attributes.md  phase-05-optimization.md  phase-parity.md
research/: 00-dspy-integration-strategy.md  01-episode-processing.md  02-node-extraction.md  03-edge-extraction.md  04-prompt-library.md  05-pydantic-models.md  06-falkordb-backend.md  07-fact-extraction-guide.md  08-cross-encoder-reranking.md  09-embedding-integration.md  10-distilbert-ner-integration.md  dspy-lm-interface.md
scripts/: optimize_kg_prompts.py  run_falkordb_browser.sh
templates/: base.html  communities.html  community_detail.html  entity_detail.html  episode_detail.html  episodes.html
tests/: __init__.py  conftest.py  test_adapter_smoke.py  test_base_lm.py  test_communities.py  test_constrained_generation.py  test_direct_outlines_model.py  test_distilbert_ner.py  test_enrichment.py  test_entity_edge_models.py  test_hybrid_lm.py  test_inference_runtime.py  test_infrastructure.py  test_mention_finder.py  test_mlx.py  test_mlx_loader.py  test_mlx_lock.py  test_mlx_runtime.py  test_outlines_adapter_parsing.py  test_parameter_control.py  test_schema_extractor.py
(+145 files in other folders)
