[project]
name = "charlie"
version = "0.1.0"
description = "Enquire Within"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphiti-core>=0.21.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "llama-cpp-python>=0.2.0",
    "dspy>=3.0.4",
    "gradio>=5.49.1",
    "falkordblite>=0.1.0",
    "textual>=6.6.0",
    "pytest-textual-snapshot>=1.0.0",
    "huey>=2.5.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "pipeline*", "inference_runtime*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m 'not inference'"
markers = [
    "inference: marks tests that make real LLM inference calls (expensive, skipped by default)",
]
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning",
    # Note: The following Textual warnings appear during interpreter shutdown and
    # cannot be suppressed via filterwarnings. See tests/conftest.py for details.
    "ignore:coroutine.*was never awaited:RuntimeWarning",
    "ignore:coroutine 'Header._on_mount.<locals>.set_title' was never awaited:RuntimeWarning",
    "ignore:coroutine 'Screen._watch_selections' was never awaited:RuntimeWarning",
]
