[project]
name = "charlie"
version = "0.1.0"
description = "Enquire Within"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphiti-core>=0.21.0",
    "llama-cpp-python>=0.2.0",
    "dspy>=3.0.4",
    "falkordblite>=0.4.0",
    "textual>=6.8.0",
    "huey>=2.5.4",
    "python-statemachine>=2.5.0",
    "huggingface_hub>=1.2.1",
    "striprtf>=0.0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-textual-snapshot>=1.0.0",
    "gradio>=5.49.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m 'not inference'"
markers = [
    "inference: marks tests that make real LLM inference calls (expensive, skipped by default)",
    "all: run all tests including those marked as inference",
]
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning",
    "ignore:The `local_dir_use_symlinks` argument is deprecated:UserWarning",
    # Note: The following Textual warnings appear during interpreter shutdown and
    # cannot be suppressed via filterwarnings. See tests/conftest.py for details.
    "ignore:coroutine.*was never awaited:RuntimeWarning",
    "ignore:coroutine 'Header._on_mount.<locals>.set_title' was never awaited:RuntimeWarning",
    "ignore:coroutine 'Screen._watch_selections' was never awaited:RuntimeWarning",
    # Textual worker coroutines may report unraisable exceptions during cleanup
    # when HomeScreen workers are cancelled at test exit. Workers are properly
    # cancelled but coroutine cleanup timing with pytest's event loop can cause
    # spurious warnings. These don't indicate actual test failures.
    "ignore:Exception ignored in.*HomeScreen:pytest.PytestUnraisableExceptionWarning",
]
